gcc/testsuite/gdc.test/fail_compilation/fail4958.d

enum FloatEnum : float { A = float.max/2, B, C }
